--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RV"
+            android:layoutAnimation="@anim/animation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
